# sdet-handbook

./: .gitignore
examples/ai-exploratory-testing/: .gitignore  CLAUDE.md  README.md  config.local.yaml  package-lock.json  package.json  tsconfig.json
examples/ai-exploratory-testing/docs/: architecture.md  (+6 more)
examples/claude-token-tracker/: Claude Token Tracker.html  app.jsx  data.jsx  package-lock.json  package.json  tsconfig.json
examples/copilot-configuration/: README.md
examples/e2e-observability/: .gitignore  README.md  check-traces.ps1  docker-compose.yml  setup-db.ps1  start-e2e.ps1  stop-db.ps1  stop-e2e.ps1
examples/e2e-observability/infra/: .gitignore  Pulumi.dev.yaml.example  Pulumi.yaml  README.md  __main__.py  database.py  iam.py  networking.py  pyproject.toml  userdata.py
examples/e2e-realtime-monitoring/: .gitignore  DOCKER_SETUP.md  README.md  build-artifact.ps1  docker-compose.yml  setup-db.ps1  start-db.ps1  start-e2e.ps1  stop-db.ps1
examples/gitlab-bot/: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/gitlab-bot/scripts/: bootstrap-local-gitlab.ps1
examples/gitlab-bot/src/gitlab_bot/: README.md  config.py  git_ops.py  main.py  models.py  subprocess_utils.py
examples/gitlab-bot/src/gitlab_bot/fixers/: __init__.py  auto_fix.py
examples/gitlab-bot/src/gitlab_bot/gitlab/: __init__.py  client.py  mr_manager.py
examples/gitlab-bot/src/gitlab_bot/reporting/: report_builder.py
examples/gitlab-bot/src/gitlab_bot/scanners/: __init__.py  code.py  dependency.py
examples/gitlab-bot/src/gitlab_bot/state/: store.py
examples/gitlab-bot/tests/: test_report_builder.py  test_state_store.py
examples/llm-evaluation/: .env.example  .gitignore  README.md  pyproject.toml
examples/llm-evaluation/examples/: azure_openai_evaluation.py  basic_evaluation.py  local_model_evaluation.py
examples/llm-evaluation/src/llm_evaluation/: __init__.py  custom_models.py  sample_data.py
examples/llm-evaluation/tests/: conftest.py  test_geval.py  test_quality_metrics.py  test_rag_metrics.py
examples/llm-observability/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
examples/llm-observability/src/llm_observability/: __init__.py  chat.py  config.py  llm_backend.py  tracing.py
examples/playwright-skills/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts
examples/playwright-test-agent/: README.md  index.html  package-lock.json  package.json  playwright.config.ts
examples/prompt-testing/: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  skills-lock.json  tsconfig.json
examples/realtime-host-monitoring/: .gitignore  README.md  alertmanager-config.yaml  clickhouse-config.xml  clickhouse-users.xml  docker-compose.yaml  host-metrics-otel-config.yaml  otel-collector-config.yaml  prometheus-config.yaml  run-windows-exporter.ps1  signoz-otel-collector-config.yaml  windows-exporter-config.yaml
(+165 files in other folders)
