[project]
name = "llm-evaluation"
version = "0.1.0"
description = "LLM Evaluation Demo with DeepEval Framework"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "deepeval>=2.0.0",
    "pytest>=8.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_evaluation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
