[project]
name = "perf-test-env"
version = "0.1.0"
description = "Dedicated Performance Testing Environment on AWS with Datadog monitoring"
requires-python = ">=3.9"
dependencies = [
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-aws>=6.0.0,<7.0.0",
    "pulumi-random>=4.0.0,<5.0.0",
    "pulumi-tls>=5.0.0,<6.0.0",
]

[tool.uv]
managed = true
dev-dependencies = []
